# telegram-logging

./: README.md  pyproject.toml
src/telelog/: __init__.py  telegram.py
