[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telelog"
version = "1.0.0"
description = "Module to notify unhandled error for beta running app"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "daniel", email = "daniel@bvm.network" }
]
dependencies = [
    "httpx"
]

[tool.hatch.build.targets.wheel]
packages = ["src/telelog"]